--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,12 +6,12 @@
 <display-name>Archetype Created Web Application</display-name>
 
 <servlet>
-  <servlet-name>HelloServlet</servlet-name>
+  <servlet-name>Servlet</servlet-name>
   <servlet-class>ua.kpi.tef.controller.Servlet</servlet-class>
 </servlet>
 
 <servlet-mapping>
-  <servlet-name>HelloServlet</servlet-name>
+  <servlet-name>Servlet</servlet-name>
   <url-pattern>/app/*</url-pattern>
 </servlet-mapping>
 
@@ -19,6 +19,7 @@
     <filter-name>EncodingFilter</filter-name>
     <filter-class>ua.kpi.tef.controller.filters.EncodingFilter</filter-class>
   </filter>
+
   <filter-mapping>
     <filter-name>EncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
